# snooker_analysis

./: .gitignore  CITATION.cff  LICENSE  README.md  analyze.py  classifier.h5  classifier2.h5  classifier3.h5  classifier_combined.h5  classifier_combined2.h5  classifier_hsv.h5  create_dataset.py  recognise.py  recognise_rt.py  recognise_video.py  template_match.py  template_match2.py  template_match_rt.py  train.py  train2.py
classifier/: train2.py
old_scripts/: analyze.py  create_dataset.py  template_match.py
recognizer_cpp/: CMakeLists.txt  config.txt
recognizer_cpp/nn_models/: classifier_cam.h5  classifier_cam.json  classifier_combined3.h5  classifier_combined3.json  classifier_v1.json  classifier_with_none.json
recognizer_cpp/src/: Ball.cpp  Recognition.cpp  main.cpp
recognizer_cpp/src/headers/: Ball.hpp  BallLabel.hpp  Cut.hpp  Recognition.hpp  Section.hpp  Template.hpp  TrackbarWindow.hpp
sze-thesis-template-latex-master/: notes.txt  thesis.tex
sze-thesis-template-latex-master/bib/: mybib.bib  mybib_old.bib
sze-thesis-template-latex-master/content/: abstract.tex  analizalas.tex  appendices.tex  betanitas.tex  bevezetes.tex  hasznalat.tex  koncepcio.tex  megvalositas.tex  osszefoglalas.tex  snooker.tex  szoftver.tex
sze-thesis-template-latex-master/include/: declaration.tex  packages.tex  temavalaszto.tex  thesis-en.tex  thesis-hu.tex  titlepage.tex
